refactor: organize code